# news-summation

./: README.md  pyproject.toml  regions.json
news-summariser/: README.md  pyproject.toml
news-summariser/src/: config.py  main.py  summariser.py
news-summariser/src/fetchers/: __init__.py  newsapi.py  rss.py
src/: config.py  main.py  summariser.py
src/fetchers/: base.py
