[project]
name = "news-summariser"
version = "0.1.0"
description = "AI-powered news summariser for local, national, and global news"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "feedparser>=6.0.10",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
news = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]